[package]
name = "microprice"
version = "1.0.0"
authors = ["Sebastian Rollen <seb@overmu.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
async-trait = "0.1.48"
config = "0.11.0"
dotenv = "0.15.0"
kafka-settings = {git = "ssh://git@github.com/Overmuse/kafka-settings.git", tag = "v0.2.2" }
polygon = { git = "ssh://git@github.com/Overmuse/polygon", tag = "v0.5.0", default-features = false, features = ["ws"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
stream-processor = { git = "ssh://git@github.com/Overmuse/stream-processor", tag = "v0.2.1" }
tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread" ] }
